--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -4,7 +4,13 @@
   height: 100%;
 }
 
-.layoutContainer > :nth-child(2) {
+.scrollContainer {
   flex: 1;
+  display: flex;
+  flex-direction: column;
   overflow-x: auto;
+}
+
+.scrollContainer > :first-child {
+  flex: 1;
 }
